<resources>
    <string name="app_name">UberApp_Tim[6]</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <string name="userPlaceholder">Pera Peric</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="userPlaceholder2">Marko Markovic</string>
    <string name="textMsg">Text</string>
    <string name="welcome">Welcome!</string>
    <string name="topgo">TopGo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="rlogin">RLogin</string>
    <string name="name">Name</string>
    <string name="text">Text</string>
    <string name="messageText">Text</string>
    <string name="logopicture">logoPicture</string>
    <string name="date">Date: </string>
    <string name="destination">Destination: </string>
    <string name="price">Price: </string>
    <string name="logout">logout</string>
    <string name="create_account_here">CREATE ACCOUNT HERE!</string>
    <string name="not_registered">Not registered?</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="begging">Begging</string>
    <string name="end">end</string>
    <string name="rating">Rating</string>
    <string name="address">Address</string>
    <string name="_100_0">$100.0</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reviews">Reviews</string>
    <string name="trip_details">Trip details</string>
    <string name="nameLastName">Imeno Prezimic</string>
    <string name="comment">Ovo je obican komentar</string>
    <string name="sign_in">Sign in</string>
    <string name="num_of_seats">Num of seats:</string>
    <string name="back">Back</string>
    <string name="order">Order</string>
    <string-array name="vehicle_type">
        <item>STANDARD</item>
        <item>LUXURY</item>
        <item>VAN</item>
    </string-array>
    <string name="ride_finished">Ride Finished!</string>
    <string name="great">Great</string>
    <string name="end_time">End Time:</string>
    <string name="passengers">Passengers</string>
    <string name="cancel">Cancel</string>
    <string name="driver">Driver</string>
    <string name="imenko_prezimic">Imenko Prezimic</string>
    <string name="panic">panic</string>
    <string name="chat">chat</string>
    <string name="would_you_like_to_rate_our_driver">Would you like to rate our driver?</string>
    <string name="wouldyou_like_to_rate_our_driver">Would you like to rate our driver?</string>
    <string name="vehicle_comment">Vehicle comment</string>
    <string name="vehicle_rating">Vehicle rating</string>
    <string name="comment_for_driver">Comment for driver</string>
    <string name="driver_rating">Driver rating</string>
    <string name="vehicle_details">Vehicle details:</string>
    <string name="documents">Documents:</string>
    <string name="pets">Pets</string>
    <string name="baby">Baby</string>
    <string name="type">Type:</string>
    <string name="number_of_seats">Number of seats:</string>
    <string name="license_plate">License plate:</string>
    <string name="model">Model:</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="error">Error!</string>
    <string name="start_time">Start time:</string>
    <string name="total">Total:</string>
    <string name="total_km">Total km:</string>
    <string name="total_rides">Total rides:</string>
    <string name="total_earned">Total earned:</string>
    <string name="routes">Routes</string>
    <string name="waiting_for_driver_to_start_a_ride">Waiting for driver to start a ride.</string>
    <string name="confirm_password">Confirm Password</string>
</resources>