<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <TextView
            android:id="@+id/dateTextView"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/begginingTextView"
            android:text="@string/begging"
            android:layout_below="@id/dateTextView"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"/>
        <TextView
            android:id="@+id/endTextView"
            android:text="@string/end"
            android:layout_below="@id/begginingTextView"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"/>
        <TextView
            android:id="@+id/priceTextView"
            android:text="@string/price"
            android:layout_below="@id/endTextView"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"/>
        <TextView
            android:id="@+id/ratingTextView"
            android:text="@string/rating"
            android:layout_below="@id/priceTextView"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>