<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/finished_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_finished"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            android:layout_below="@id/finished_txt"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/end_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="20sp"
            android:layout_below="@id/price_txt"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_time_txt"
            android:layout_centerHorizontal="true"

            android:text="@string/great" />

    </RelativeLayout>

</LinearLayout>