<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30sp"
    android:background="@color/dialogColor">

    <RelativeLayout
        android:id="@+id/change_password_edit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/password"
        android:background="@drawable/edit_text"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_centerHorizontal="true"
        android:hint="@string/current_password" />

        <EditText
            android:layout_marginTop="20sp"
            android:id="@+id/new_password"
            android:background="@drawable/edit_text"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:hint="@string/new_password" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/change_password_edit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_toRightOf="@id/btn_ok"
                android:layout_marginLeft="10dp"
                android:background="@drawable/back_button"
                />


            <Button
                android:id="@+id/btn_ok"
                android:background="@drawable/edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:text="@string/submit" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>