<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passenger.PassengerRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="40sp"
            android:text="@string/register"
            android:textSize="43sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:background="@drawable/round_edges_layout"
            android:layout_margin="20sp"
            android:padding="20sp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <RelativeLayout
                android:id="@+id/nameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/nameTextBox"
                    android:hint="@string/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/surnameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/surnameTextBox"
                    android:layout_width="match_parent"
                    android:hint="@string/last_name"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/usernameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/surnameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/usernameTextBox"
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text"
                    android:inputType="textEmailAddress" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passwordLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/paswordTextBox"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/phoneNumberTextBox"
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text"
                    android:inputType="phone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumberLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp">

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>