<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

        <ImageView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/topgologo"
            android:text="@string/topgo"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop = "50sp"
            android:layout_marginBottom="30sp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoText"
            android:layout_marginStart="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/round_edges_layout"
            android:elevation="10dp"
            android:padding="20sp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            tools:ignore="RtlSymmetry">

            <RelativeLayout
                android:id="@+id/usernameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/usernameTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text"
                    android:drawableEnd="@drawable/ic_action_mail"
                    android:hint="Username"


                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passwordLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameLayout"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/paswordTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:background="@drawable/edit_text"
                    android:drawableEnd="@drawable/ic_action_lock"
                    android:hint="Password"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loginButtonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />
            </RelativeLayout>

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButtonLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/not_registered"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerText"
                android:layout_centerHorizontal="true"
                android:text="@string/create_account_here"
                android:textColor="@color/primaryC"
                android:textSize="12sp" />

        </RelativeLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>