<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="10dp">
    <RelativeLayout
        android:id="@+id/routeInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_centerVertical="true"
            android:background="@color/primaryC"
            android:layout_centerHorizontal="true"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/departureIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/car_icon"/>
            <ScrollView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/departureIcon"
                android:layout_centerHorizontal="true"
                android:scrollbars="vertical">
                <TextView
                    android:id="@+id/departure_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bla"
                    />
            </ScrollView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <ImageView
                android:layout_alignParentRight="true"
                android:id="@+id/destinationIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/car_icon" />
            <ScrollView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/destinationIcon"
                android:scrollbars="vertical">
                <TextView
                    android:id="@+id/destination_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="asdasdasd"
                    />
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
        <TextView
            android:id="@+id/driverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/routeInfo"
            android:textSize="20sp"
            android:text="@string/driver"/>
        <RelativeLayout
            android:id="@+id/driverLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/driverTextView"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/driverProfilePicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tate"/>
            <TextView
                android:id="@+id/driverNameAndLastName"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/driverProfilePicture"
                android:text="@string/imenko_prezimic"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/driverLayout"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true">
            <Button
                android:background="@drawable/edit_text"
                android:id="@+id/panicBtn"
                android:layout_width="100dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/chatBtn"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:text="@string/panic"
                android:layout_height="45dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/back_button"
                android:id="@+id/chatBtn"
                android:layout_width="100dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/chat"
                android:layout_height="45dp" />
        </RelativeLayout>
    </RelativeLayout>
